set(SPANATTN_REF_KERNEL_INTERFACE_DIR
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)
set(SPANATTN_REF_KERNEL_INC_DIR
    ${CMAKE_CURRENT_SOURCE_DIR}
)
file(GLOB_RECURSE SPANATTN_REF_KERNEL_SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/attn_v1/*.cu
)

add_library(${SPANATTN_REF_KERNEL} STATIC ${SPANATTN_REF_KERNEL_SRC})
target_include_directories(${SPANATTN_REF_KERNEL}
    PRIVATE ${SPANATTN_REF_KERNEL_INC_DIR})
target_include_directories(${SPANATTN_REF_KERNEL}
    INTERFACE ${SPANATTN_REF_KERNEL_INTERFACE_DIR})
target_compile_definitions(${SPANATTN_REF_KERNEL}
    PRIVATE ${SPANATTN_DEFINITION})
target_link_libraries(${SPANATTN_REF_KERNEL}
    PUBLIC hie)
